# denim

./: Cargo.toml  docker-compose.yml
migrations/: 20250421093056_basic_student.up.sql  20250422043127_users.down.sql  20250422043127_users.up.sql  20250422054316_events.down.sql  20250422054316_events.up.sql  20250428015643_oauth.down.sql  20250428015643_oauth.up.sql  20250512034523_dev_to_admin.down.sql  20250512034523_dev_to_admin.up.sql  20250512053029_verify_events.down.sql  20250512053029_verify_events.up.sql  20250512091830_forms_to_tutor_groups.down.sql  20250512091830_forms_to_tutor_groups.up.sql  20250513071548_make_email_addrs_unique.down.sql  20250513071548_make_email_addrs_unique.up.sql  20250519010433_timezone_in_event_time.down.sql  20250519010433_timezone_in_event_time.up.sql  20250520084020_remove_house_from_student.down.sql  20250520084020_remove_house_from_student.up.sql  20250522055354_collapsed_lots_of_work.down.sql  20250522055354_collapsed_lots_of_work.up.sql
src/: auth.rs  config.rs  data.rs  error.rs  main.rs  maud_conveniences.rs  routes.rs  state.rs
src/auth/: backend.rs  postgres_store.rs
src/config/: auth.rs  date_locale.rs  db.rs  important_item.rs  words.txt
src/data/: event.rs  photo.rs  student.rs  student_groups.rs  user.rs
src/routes/: all_events.rs  all_people.rs  event_in_detail.rs  events.rs  import_export.rs  index.rs  login.rs  new_admin_flow.rs  people.rs  profile.rs  set_new_password.rs  sse.rs
