[package]
name = "denim"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
maud = { version = "0.27.0", features = ["axum"] }
tokio = { version = "1.44.2", features = ["full"] }
sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
snafu = "0.8.5"
secrecy = "0.10.3"
dotenvy = { version = "0.15.7", features = ["cli"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
chrono = "0.4.40"
