[package]
name = "denim"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
maud = { version = "0.27.0", features = ["axum"] }
tokio = { version = "1.44.2", features = ["full"] }
sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
snafu = "0.8.5"
secrecy = { version = "0.10.3", features = ["serde"] }
dotenvy = { version = "0.15.7", features = ["cli"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
chrono = "0.4.40"
futures = { version = "0.3.31", default-features = false }
axum-login = "0.17.0"
bcrypt = "0.17.0"
async-trait = "0.1.88"
rmp-serde = "1.3.0"
rand = "0.9.1"
