[package]
name = "denim"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "multipart"] }
maud = { version = "0.27.0", features = ["axum"] }
tokio = { version = "1.44.2", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "time", "uuid"] }
snafu = "0.8.5"
secrecy = { version = "0.10.3", features = ["serde"] }
dotenvy = { version = "0.15.7", features = ["cli"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
futures = { version = "0.3.31", default-features = false }
axum-login = "0.17.0"
bcrypt = "0.17.0"
async-trait = "0.1.88"
rmp-serde = "1.3.0"
rand = "0.9.1"
bitflags = { version = "2.9.0", features = ["serde"] }
email_address = "0.2.9"
tower-http = { version = "0.6.2", features = ["trace", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
rust-s3 = "0.35.1"
zip = "3.0.0"
csv = "1.3.1"
base64 = "0.22.1"
jiff = { version = "0.2.13", features = ["serde"] }
time = "0.3.41"
icu = { version = "2.0.0", features = ["serde"] }
jiff-icu = "0.2.0"
